2000-04-10  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* objects.h: Don't redeclare scm_call_generic_0 and
	scm_apply_generic.  (Thanks to Tal Tversky.)

2000-04-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* hash.c (scm_hasher):  Use symbolic names for the tc3 constants.
	Unpack SCM value to use it as a switch parameter.  Don't cast SCM
	values to int values.

2000-04-10  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* coop.c (mother): Handled EINTR (the wait has been interrupted by
	a signal).

2000-04-07  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_WTA_DISPATCH_[012n]):  To test whether a SCM value
	contains a raw zero value it has to be unpacked.

	* debug.c (with_traps_inner, scm_with_traps):  Passing SCM values
	via void * requires unpacking / packing.

	* stacks.h (SCM_STACKP):  Remove unnecessary SCM_NIMP test and use
	SCM_EQ_P to compare SCM values.

	* stacks.h (SCM_FRAME_VOID_P, SCM_FRAME_REAL_P, SCM_FRAME_PROC_P,
	SCM_FRAME_EVAL_ARGS_P, SCM_FRAME_OVERFLOW_P):  Remove unnecessary
	call to SCM_UNPACK.

	* tags.h (SCM_NECONSP):  Define in terms of SCM_ECONSP

	* tags.h (SCM_ECONSP):  Clarify the test for glocs.  This is still
	quite ugly.

2000-04-05  Michael Livshin  <mlivshin@bigfoot.com>

	* async.[ch]: unexpose low-level async access macros (thanks to
 	Dirk Herrmann).

	* validate.h: move async validation macros to async.c (nobody else
 	needs them anyway), and rename them.

2000-04-04  Michael Livshin  <mlivshin@bigfoot.com>

	* async.h: kill the scm_async_t struct.  having a heap cell
 	pretending to be a C struct is not helthy, and is not needed here
 	anyway, as asyncs happily fit in one heap cell.

	* async.c: reflect the fact that asyncs are now represented by
 	single heap cell each.

2000-04-04  Gary Houston  <ghouston@arglist.com>

	* error.c (scm_syserror): save errno before doing anything else,
	since it's used in two expressions and may get mutated (thanks to
	Dirk Herrmann).

2000-04-04  Dirk Herrmann  <D.Herrmann@tu-bs.de>
